samples/_failures_safe/1761405453_60dd78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d60a506.c: In function ‘main’:
./samples/SAFE/__tmp_2d60a506.c:164:5: error: expected expression at end of input
  164 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_2d60a506.c:164:5: error: expected declaration or statement at end of input
